@@ -106,6 +106,7 @@ public:
 
 	//schedules query
 	inline bool ScheduleQuery(CMySQLQuery *query) {
+		m_QueryCounter++;
 		return m_QueryQueue.push(query);
 	}
 	//process queries
@@ -119,8 +120,13 @@ public:
 	static inline CMySQLHandle *GetHandle(int cid) {
 		return SQLHandle.at(cid);
 	}
+	//returns connection id
 	inline int GetID() const {
 		return m_MyID;
+	}
+	//returns number of unprocessed queries
+	inline unsigned int GetUnprocessedQueryCount() const {
+		return m_QueryCounter;
 	}
 
 
@@ -145,6 +151,7 @@ private:
 	static unordered_map<int, CMySQLHandle *> SQLHandle;
 	
 	boost::atomic<bool> m_QueryThreadRunning;
+	boost::atomic<unsigned int> m_QueryCounter;
 	boost::thread *m_QueryThread;
 	boost::lockfree::spsc_queue <
 			CMySQLQuery *,
