@@ -34,6 +34,7 @@ namespace Native {
 	cell AMX_NATIVE_CALL mysql_connect(AMX* amx, cell* params);
 	cell AMX_NATIVE_CALL mysql_close(AMX* amx, cell* params);
 	cell AMX_NATIVE_CALL mysql_reconnect(AMX* amx, cell* params);
+	cell AMX_NATIVE_CALL mysql_unprocessed_queries(AMX* amx, cell* params);
 
 	cell AMX_NATIVE_CALL mysql_errno(AMX* amx, cell* params);
 	cell AMX_NATIVE_CALL mysql_escape_string(AMX* amx, cell* params);
